fixing some spacing issues

--- a/src/app/_app-theme.scss
+++ b/src/app/_app-theme.scss
@@ -3,6 +3,13 @@
 @use '@angular/material' as mat;
 
 @mixin color($theme) {
+  mat-sidenav{
+    background-color: mat.get-theme-color($theme, primary, 200) !important;
+  }
+
+  mat-sidenav-container{
+    background-color: mat.get-theme-color($theme, primary, 100) !important;
+  }
 }
 
 @mixin theme($theme) {
